--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "dselectronics",
   "version": "0.0.0",
   "dependencies": {
-    "express": "~3.2.4",
-    "socket.io": "~0.9.16"
+    "express": "~3.4.0",
+    "jade": "*",
+    "socket.io": "~0.9.16",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "lodash": "~2.1.0",
+    "session.socket.io": "~0.1.6",
+    "connect-redis": "~1.4.5"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -14,7 +20,7 @@
     "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.2.0",
@@ -26,13 +32,13 @@
     "grunt-open": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
-    "connect-livereload": "~0.2.0",
+    "connect-livereload": "~0.3.0",
     "grunt-google-cdn": "~0.2.0",
     "grunt-ngmin": "~0.0.2",
     "time-grunt": "~0.1.0",
     "grunt-jade": "~0.4.0",
     "grunt-express": "~0.3.3",
-    "grunt-connect-proxy": "~0.1.1",
+    "grunt-connect-proxy": "~0.1.6",
     "karma-ng-scenario": "~0.1.0",
     "grunt-karma": "~0.6.2",
     "karma-script-launcher": "~0.1.0",
