--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-watch": "kingcody/grunt-contrib-watch#npm-branch-hotfix",
     "grunt-autoprefixer": "~0.2.0",
     "grunt-usemin": "~0.1.11",
     "grunt-svgmin": "~0.2.0",
